# music-theory

./: .gitignore  Cargo.toml  README.md  config.ini  pyproject.toml  run.py
.uml/: classes_music-theory.puml  packages_music-theory.puml
doc/class_relation_v1/: object.drawio
doc/class_relation_v2/: object.drawio
mt/: Cargo.toml
mt-api/: Cargo.toml
mt-app/: README.md  angular.json  package-lock.json  package.json
mt-app/src/: index.html
mt-app/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
mt-macros/: Cargo.toml
mt-macros-internals/: Cargo.toml
mt-macros-internals/src/: lib.rs
mt-macros/src/: lib.rs
mt/src/: config.rs  core.rs  harmony.rs  lib.rs  tonality.rs
mt/src/config/: common.rs  harmony.rs  stracture.rs  stream.rs  timbre.rs  tonality.rs
mt/src/tonality/: note.rs
music-theory/: run.py  utils.py
music-theory/chord/: __init__.py  _const.py  chord.py  quality.py
music-theory/note/: __init__.py  _note.py  abc.py  handlers.py  note.py
music-theory/note/mods/: mod.py
music_theory/: __init__.py  audio.py  config.py  mst_object.py  mstobject.py  note_derived.py  utils.py
music_theory/blend/: __init__.py  abc.py  blend.py
music_theory/chord/: __init__.py  _const.py  _statics.py  chord.py  quality.py
music_theory/mixer/: abc.py  mixer.py
music_theory/note/: __init__.py  _const.py  _note.py  _statics.py  abc.py  handler.py  key.py  mod.py  note.py  scale.py  tuner.py
music_theory/oscilloscope/: __init__.py  abc.py  handler.py  scope.py
music_theory/synthesiser/: __init__.py  abc.py  handler.py  oscillator.py  synthesiser.py
music_theory/tone/: __init__.py  abc.py  handler.py  oscillator.py  synthesiser.py
music_theory/tuner/: __init__.py  abc.py  handler.py  tuner.py
src/: do.py
src/music_theory_core/context/: __init__.py
src/music_theory_core/core/: __init__.py  base.py  domain.py
src/music_theory_core/note/: base.py  note.py
src/music_theory_core/scale/: base.py
tests/note/: test_note.py
(+43 files in other folders)
