[workspace]
resolver = "2"
members = [
    "mt",
    "mt-api",
    "mt-macros",
    "mt-macros-internals"
]


[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

[workspace.dependencies]
anyhow = { version = "1.0" }
serde = { version = "1.0"}
toml = { version = "0.8" }
cpal = { version = "0.15" }
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false }
