[package]
name = "mt-macros-internals"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
proc-macro2 = { workspace = true, default-features = true }
quote = { workspace = true, default-features = true }
syn = { workspace = true, features = ["full", "parsing"] }
